fix: fixed overflow in code sections

--- a/styles/courses.css
+++ b/styles/courses.css
@@ -529,4 +529,5 @@ pre code.hljs {
 pre code,
 pre code.hljs {
   display: block;
+  overflow: auto;
 }
